# hand_gesture_detection

./: .arclint  CHANGELOG.md  CMakeLists.txt  README.md  README_cn.md  package.xml
config/J5/: gestureDet_8x21.hbm
include/: gesture_data.h  gesture_postprocess.h  gesture_postprocess_util.h  gesture_preprocess.h  hand_gesture_det_node.h  hand_gesture_output_parser.h  lmks_process.h
launch/: hand_gesture_detection.launch.py  hobot_hand_gesture_detection.launch.py
src/: gesture_postprocess.cpp  gesture_postprocess_util.cc  gesture_preprocess.cpp  hand_gesture_det_node.cpp  hand_gesture_output_parser.cpp  lmks_process.cpp  main.cpp
